# digit_classification

./: .gitignore  README.md  print_tree.py  pyproject.toml  requirements.txt  startup.sh
configs/: config.yaml
images/: create_test_image.py
models/: __init__.py
scripts/: run_inference.sh  run_training.sh
src/digit_classification/: cli.py  data.py  evaluate.py  predict.py  train.py  transforms.py
src/digit_classification.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/digit_classification/models/: cnn.py
src/digit_classification/utils/: model_utils.py  plot_utils.py  utils.py
src/digital_classification/: model.py
tests/: test_data.py  test_evaluation.py  test_model.py
utils/: model_utils.py
