[project]
name = "digit-classification"
version = "0.1.0"
description = "Digit Classification Buzz Solutions."
readme = "README.md"
authors = [
  { name = "Arianna Kernosek", email = "ariannakernosek@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
  "lightning>=2.5.0.post0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "typer>=0.15.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
]

[project.scripts]
digit-classification = "digit_classification.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
